# KCTON_FULL_PROJECT

backend/: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: api_contract.txt  routes.py  tz_kcton.txt  tz_nashe.txt
backend/app/controllers/: __init__.py  api.py  filters.py  forecast.py  monitoring.py  reports.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  models.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/api/: forecast.js  monitoring.js  reports.js
frontend/src/app/: Layout.tsx  routes.tsx
frontend/src/app/components/: AIReportHeader.tsx  ForecastingChart.tsx  ForecastingHeader.tsx  Header.tsx  Heatmap.tsx  KPICard.tsx  LeaderList.tsx  ModelAccuracyCard.tsx  PopulationMap.tsx  Sidebar.tsx
frontend/src/app/components/ui/: FilterSelect.tsx  bento-card.tsx
frontend/src/app/pages/: AIReport.tsx  Forecasting.tsx  Monitoring.tsx
frontend/src/hooks/: useFilters.js  useForecast.js  useReport.js  useTheme.ts
frontend/src/styles/: fonts.css  theme.css
frontend/src/types/: index.ts
frontend/src/utils/: dataHelpers.ts  errorHandler.js  validation.js
