[project]
name = "cston"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.0",
    "geoalchemy2>=0.19.0",
    "geojson>=3.2.0",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "prophet>=1.3.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.14.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
